# hedgehog-higherorder

./: README.md  hedgehog-higherorder.cabal
src/Hedgehog/: HigherOrder.hs
src/Hedgehog/HigherOrder/: Internal.hs
test/: test.hs
