name:                hedgehog-higherorder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/hedgehog-higherorder#readme
license:             BSD3
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2019 Li-yao Xia
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Hedgehog.HigherOrder
    Hedgehog.HigherOrder.Internal
  build-depends:
    test-fun,
    hedgehog >= 1.0 && < 2,
    transformers,
    base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite qcho-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: test.hs
  build-depends:
    hedgehog-higherorder,
    hedgehog,
    base
  ghc-options: -Wall
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/hedgehog-higherorder
